[package]
authors = ["Dilip Dalton <dilipdalton@hotmail.com>"]
categories = ["embedded", "no-std"]
description = "`display-interface` compatible driver for the SSD1322 OLED display controller"
documentation = "https://docs.rs/ssd1322_di"
repository = "https://github.com/ddalton/ssd1322_di"
keywords = ["no-std", "ssd1322", "oled", "embedded"]
license = "MIT"
name = "ssd1322_di"
readme = "README.md"
version = "0.3.0"
edition = "2018"

[dependencies]
embedded-hal = "^ 0.2"
display-interface = "^ 0.4"
embedded-graphics = "^ 0.8"

[dev-dependencies]
embedded-graphics = "^ 0.8"
display-interface-spi = "^ 0.4"

